2008-06-04  Janus Weil  <janus@gcc.gnu.org>

PR fortran/36322
	PR fortran/36275
	* resolve.c (resolve_symbol): Correctly copy the interface for a
	PROCEDURE declaration.


2008-06-04  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/36322
	PR fortran/36275
	* gfortran.dg/proc_decl_2.f90: Extended.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@136372 138bc75d-0d04-0410-961f-82ee72b054a4